--- a/Frontend/src/components/ProductoCarrito/Cupones.css
+++ b/Frontend/src/components/ProductoCarrito/Cupones.css
@@ -8,7 +8,6 @@
 
 /* Contenedor general para la lista de cupones */
 .contenedor-lista-cupones {
-  border: 2px solid red;
   width: 100%;
   max-width: 980px;
   margin: 12px auto;
@@ -28,7 +27,6 @@
   width: 100%;
   min-height: 250px;
   max-height: 60vh;        /* muestra hasta cierto tamaño */
-  overflow-y: auto;        /* scroll nativo vertical */
   border-radius: 8px;
   margin-bottom: 8px;
   display: flex;
@@ -115,6 +113,9 @@
   display: inline-block;
   background: linear-gradient(180deg,#fff,#f7faf7);
   border: 1px solid #e6e9ee;
+  gap: 10px;
+  margin-bottom: 12px;
+  padding: 8px;
 }
 
 /* Responsive */
